progress towards Complementary and SEUS compat (but mostly Complementary)